fixed cursor being invisible I think

--- a/style.css
+++ b/style.css
@@ -125,7 +125,6 @@ h1, p {
   font-size: 3rem;
   text-decoration: none;
   transition: 1s;
-  cursor: none;
   
 }
 
